# multimodal-anomaly-report-generation

./: .env.example  .gitignore  pyproject.toml
Frontend/src/app/: App.tsx
Frontend/src/app/pages/: OverviewPage.tsx  ReportBuilderPage.tsx
apps/api/: main.py
configs/: anomaly.yaml  experiment.yaml  report_schema.json  runtime.yaml
docs/: experiment-runner.md  report-pipeline-guide.md
notebooks/: Basic.ipynb  GH_EDA.ipynb
notebooks/moon/: ALL_EfficientAd.ipynb  ALL_Patchcore.ipynb  EDA.ipynb  baseline.ipynb
patchcore_training/scripts/: inference.py
patchcore_training/src/: model.py
scripts/: benchmark_inference.py  eval_llm_baseline.py  eval_mmad.py  export_patchcore.py  predict_anomalib.py  run_ad_inference_ckpt.py  run_experiment.py  test_report_pipeline.py  train.py  train_anomalib.py  upload_reports_to_pg.py
src/anomaly/: __init__.py  factory.py  patchcore_adapter.py  patchcore_onnx.py
src/config/: experiment.py
src/datasets/: dataloader.py  preprocess.py
src/mllm/: base.py  factory.py  internvl_client.py  llava_client.py  qwen_client.py
src/service/: pipeline.py
src/storage/: pg.py
src/utils/: checkpoint.py  log.py  path.py
src/visual/: plot.py
